objects/ssot__AssessmentEnvelopeItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentEnvelopeId__c</fullName>
        <label>Assessment Envelope</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentId__c</fullName>
        <label>Assessment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnvelopeItemStatus__c</fullName>
        <label>Envelope Item Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Envelope Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291281098_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentEnvelopeItem_AssessmentEnv_rel</label>
        <referenceTo>ssot__AssessmentEnvelope__dlm</referenceTo>
        <relationshipLabel>AssessmentEnvelopeItem_AssessmentEnv_rel</relationshipLabel>
        <relationshipName>rel_1720291281098_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291286034_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentEnvelopeItem_AssessmentId__rel</label>
        <referenceTo>ssot__Assessment__dlm</referenceTo>
        <relationshipLabel>AssessmentEnvelopeItem_AssessmentId__rel</relationshipLabel>
        <relationshipName>rel_1720291286034_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>